# ai-background-assistant

./: .gitignore  CLAUDE.md  README.md  SPEC.md  app.js  index.html  mkdocs.yml  pyproject.toml  styles.css
docs/: index.md
